--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
             <a href="index.html" class="active">Home</a>
             <a href="chamber/">Chamber Project</a>
             <a href="final/">Final Project</a>
+            <a href="#">Resources</a>
+
         </nav>
 
         <main>
