--- a/index.html
+++ b/index.html
@@ -6,16 +6,28 @@
         <meta name="description" content="WDD231 course home page showcasing my web design projects and skills">
         <meta name="author" content="Majok Aguer">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" href="/favicon.ico">
         <title>WDD231 Home</title>
+
+        <meta property="og:title" content="WDD231 Course Home">
+        <meta property="og:description"
+            content="This page showcases my frontend development projects, certificate courses and learning progress in WDD231.">
+        <meta property="og:image" content="https://aguer47.github.io/wdd231/images/preview.jpg">
+        <meta property="og:url" content="https://aguer47.github.io/wdd231/">
+        <meta property="og:type" content="website">
+        <meta property="og:locale" content="en_US">
+
 
         <link rel="stylesheet" href="styles/normalize.css">
         <link rel="stylesheet" href="styles/small.css">
         <link rel="stylesheet" href="styles/larger.css">
-        
+
+
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+            rel="stylesheet">
 
         <script src="scripts/navigation.js" defer></script>
         <script src="scripts/date.js" defer></script>
