add the lattest changes

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -12,8 +12,8 @@
         <link rel="icon" href="/favicon.ico">
 
         <meta property="og:title" content="ValueHub Solutions Directory">
-        <meta property="og:description" content="Explore trusted business members in ValueHub Solutions">
-        <meta property="og:image" content="images/logo.png">
+        <meta property="og:description" content="Explore a network of credible businesses at ValueHub Solutions, built for trust and growth">
+        <meta property="og:image" content="https://aguer47.github.io/wdd231/chamber/images/logo.png">
         <meta property="og:url" content="https://aguer47.github.io/wdd231/chamber/directory.html">
         <meta property="og:type" content="website">
 
