--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -11,14 +11,14 @@
 
         <link rel="icon" href="/favicon.ico">
 
-        <meta property="og:title" content="ValueHub Solutions Directory">
+        <meta property="og:title" content="ValueHub Solutions, the most trusted business network.">
         <meta property="og:description" content="Explore a network of credible businesses at ValueHub Solutions, built for trust and growth">
         <meta property="og:image" content="https://aguer47.github.io/wdd231/chamber/images/logo.png">
         <meta property="og:url" content="https://aguer47.github.io/wdd231/chamber/directory.html">
         <meta property="og:type" content="website">
-
         <link rel="stylesheet" href="styles/normalize.css">
         <link rel="stylesheet" href="styles/directory.css">
+        <link rel="stylesheet" href="styles/home.css">
         <script src="scripts/directory.js" defer></script>
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -36,7 +36,7 @@
             <nav>
                 <button id="menuBtn">☰</button>
                 <ul id="navList">
-                    <li><a href="#">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="directory.html" class="active">Directory</a></li>
                     <li><a href="#">Discover</a></li>
                     <li><a href="#">Join</a></li>
