--- a/chamber/index.html
+++ b/chamber/index.html
@@ -12,8 +12,8 @@
 
         <meta property="og:title" content="ValueHub Solutions Chamber of Commerce">
         <meta property="og:description" content="Connecting businesses, empowering growth in Kampala.">
-        <meta property="og:image" content="images/logo.png">
-        <meta property="og:url" content="index.html">
+        <meta property="og:image" content="https://aguer47.github.io/wdd231/chamber/images/logo.png">
+        <meta property="og:url" content="https://aguer47.github.io/wdd231/chamber/index.html">
         <meta property="og:type" content="website">
 
         <link rel="stylesheet" href="styles/normalize.css">
@@ -49,7 +49,7 @@
             <section class="hero">
                 <img src="images/hero.webp" alt="Kampala city business district">
                 <div class="hero-text">
-                    <h2>Empowering Businesses in Kampala</h2>
+                    <h2>Empowering Kampala Businesses with growth</h2>
                     <p>Connecting enterprises and building economic strength</p>
                     <a href="#" class="cta-btn">Join the Chamber</a>
                 </div>
@@ -78,7 +78,7 @@
                 <section class="weather card">
                     <h4>Weather in Kampala</h4>
                     <div class="weather-current">
-                        <img id="weather-icon" src="https://openweathermap.org/img/wn/02d.png" alt="Weather icon">
+                        <img id="weather-icon" src="" alt="">
                         <div>
                             <p><strong>Current:</strong> <span id="temp">24</span>°C — <span id="desc">Partly
                                     Cloudy</span></p>
