--- a/chamber/index.html
+++ b/chamber/index.html
@@ -78,21 +78,21 @@
                 <section class="weather card">
                     <h4>Weather in Kampala</h4>
                     <div class="weather-current">
-                        <img id="weather-icon" src="" alt="">
+                        <img id="weather-icon" src="images/weather-placeholder.png" alt="weather icon">
                         <div>
                             <p><strong>Current:</strong> <span id="temp">24</span>°C — <span id="desc">Partly
                                     Cloudy</span></p>
                             <div class="weather-details" id="weather-details"></div>
                         </div>
                     </div>
-                    <h3>3-Day Forecast</h3>
+                    <h5>3-Day Forecast</h5>
                     <div class="forecast" id="forecast"></div>
                 </section>
             </div>
 
             <!-- Spotlights section -->
             <section class="spotlights">
-                <h5>Member Spotlights</h5>
+                <h2>Member Spotlights</h2>
                 <div class="spotlight-cards" id="spotlights">
                     <h3 class="visually-hidden">Featured Chamber Members</h3>
                 </div>
