--- a/chamber/index.html
+++ b/chamber/index.html
@@ -78,7 +78,7 @@
                 <section class="weather card">
                     <h4>Weather in Kampala</h4>
                     <div class="weather-current">
-                        <img id="weather-icon" alt="weather icon" hidden>
+                        <img id="weather-icon" src="data:image/gif;base64,R0lGODlhAQABAAAAACw=" alt="weather icon" hidden>
                         <div>
                             <p><strong>Current:</strong> <span id="temp">24</span>°C — <span id="desc">Partly
                                     Cloudy</span></p>
