--- a/chamber/index.html
+++ b/chamber/index.html
@@ -10,7 +10,7 @@
         <title>ValueHub Solutions | Chamber of Commerce</title>
         <link rel="icon" href="favicon.ico">
 
-        <meta property="og:title" content="ValueHub Solutions Chamber of Commerce">
+        <meta property="og:title" content="ValueHub Solutions Chamber of Commerce Kampala">
         <meta property="og:description" content="Connecting businesses, empowering growth in Kampala.">
         <meta property="og:image" content="https://aguer47.github.io/wdd231/chamber/images/logo.png">
         <meta property="og:url" content="https://aguer47.github.io/wdd231/chamber/index.html">
@@ -66,7 +66,7 @@
                         </li>
                         <li>
                             <span>SME Growth Workshop</span>
-                            <span class="event-date">Oct 20</span>
+                            <span class="event-date">Oct 20</span> 
                         </li>
                         <li>
                             <span>Investment Forum</span>
