--- a/chamber/index.html
+++ b/chamber/index.html
@@ -34,12 +34,12 @@
             </div>
             
             <nav>
-                <button id="menuBtn">☰</button>
+                <button id="menuBtn" aria-label="Open navigation menu">☰</button>
                 <ul id="navList">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="directory.html">Directory</a></li>
-                    <li><a href="#">Discover</a></li>
-                    <li><a href="#">Join</a></li>
+                    <li><a href="directory.html">Discover</a></li>
+                    <li><a href="join.html">Join</a></li>
                 </ul>
             </nav>
         </header>
