--- a/chamber/join.html
+++ b/chamber/join.html
@@ -7,7 +7,7 @@
         <meta name="description"
             content="ValueHub Solutions Chamber of Commerce supporting business growth in Kampala.">
         <meta name="author" content="Majok Aguer">
-        <title>ValueHub Solutions | Chamber of Commerce</title>
+        <title>Join ValueHub Solutions Chamber of Commerce</title>
         <link rel="icon" href="favicon.ico">
 
         <meta property="og:title" content="ValueHub Solutions Chamber of Commerce - Kampala">
