--- a/chamber/join.html
+++ b/chamber/join.html
@@ -115,7 +115,7 @@
                     </label>
         
                     <!-- Hidden timestamp -->
-                    <input type="hidden" name="timestamp" id="timestamp">
+                    <input type="hidden" name="timestamp" id="timestamp" value="pending">
         
                     <input type="submit" value="Apply for Membership">
                 </form>
