--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -16,6 +16,7 @@
         <meta property="og:image" content="https://aguer47.github.io/wdd231/chamber/images/logo.png">
         <meta property="og:url" content="https://aguer47.github.io/wdd231/chamber/directory.html">
         <meta property="og:type" content="website">
+        
         <link rel="stylesheet" href="styles/normalize.css">
         <link rel="stylesheet" href="styles/directory.css">
         <link rel="stylesheet" href="styles/home.css">
@@ -38,7 +39,7 @@
                 <ul id="navList">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="directory.html" class="active">Directory</a></li>
-                    <li><a href="directory.html">Discover</a></li>
+                    <li><a href="discover.html">Discover</a></li>
                     <li><a href="join.html">Join</a></li>
                 </ul>
             </nav>
