--- a/project/site-plan.html
+++ b/project/site-plan.html
@@ -13,10 +13,10 @@
 
 
         
-        <meta property="og:title" content="Recipe Explorer — site plan" />
-        <meta property="og:description" content="Discover easy recipes by ingredients, time and cuisine at your convienent." />
-        <meta property="og:image" content="images/og-recipe-explorer.webp" />
-        <meta property="og:url" content="https://aguer47.github.io/wdd231/project/" />
+        <meta property="og:title" content="Recipe Explorer — site plan">
+        <meta property="og:description" content="Discover easy recipes by ingredients, time and cuisine at your convienent.">
+        <meta property="og:image" content="images/og-recipe-explorer.webp">
+        <meta property="og:url" content="https://aguer47.github.io/wdd231/project/">
 
 
         <!-- Google Fonts -->
