--- a/project/index.html
+++ b/project/index.html
@@ -14,19 +14,24 @@
         <link rel="canonical" href="https://aguer47.github.io/wdd231/finalproject/">
         <meta property="og:type" content="website">
         <meta property="og:title" content="Recipe Explorer | Home">
-        <meta property="og:description" content="Find recipes fast and save your favorites.">
-        <meta property="og:image" content="images/og-image.svg">
+        <meta property="og:description" content="Find recipes fast, save your favorites and cook smarter every day.">
+        <meta property="og:image" content="https://aguer47.github.io/wdd231/project/images/logo.png">
         <meta property="og:url" content="https://aguer47.github.io/wdd231/finalproject/">
         <meta name="twitter:card" content="summary_large_image">
 
 
         <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
-
+        <link rel="stylesheet" href="styles/normalize.css">
         <link rel="stylesheet" href="styles/main.css">
 
     
         <script src="scripts/main.js" type="module" defer></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+
     </head>
 
     <body>
