--- a/project/recipes.html
+++ b/project/recipes.html
@@ -14,17 +14,23 @@
         <meta property="og:type" content="website">
         <meta property="og:title" content="Recipe Explorer — Recipes">
         <meta property="og:description" content="Dynamic recipe list generated from JSON data.">
-        <meta property="og:image" content="images/og-image.svg">
+        <meta property="og:image" content="https://aguer47.github.io/wdd231/project/images/logo.png">
         <meta property="og:url" content="https://aguer47.github.io/wdd231/project/recipes.html">
         <meta name="twitter:card" content="summary_large_image"> 
         <link rel="canonical" href="https://aguer47.github.io/wdd231/project/recipes.html">
 
         <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-
+        <link rel="stylesheet" href="styles/normalize.css">
         <link rel="stylesheet" href="styles/main.css">
 
         <script src="scripts/main.js" type="module" defer></script>
         <script src="scripts/recipe.js" type="module" defer></script>
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+
     </head>
 
     <body>
