--- a/project/about.html
+++ b/project/about.html
@@ -11,16 +11,20 @@
         <meta property="og:type" content="website">
         <meta property="og:title" content="About Recipe Explorer">
         <meta property="og:description" content="Discover the purpose and design behind Recipe Explorer.">
-        <meta property="og:image" content="images/og-image.svg">
+        <meta property="og:image" content="https://aguer47.github.io/wdd231/project/images/logo.png">
         <meta property="og:url" content="https://aguer47.github.io/wdd231/project/about.html">
         <meta name="twitter:card" content="summary_large_image">
 
         <link rel="canonical" href="https://aguer47.github.io/wdd231/project/about.html">
         <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-
+        <link rel="stylesheet" href="styles/normalize.css">
         <link rel="stylesheet" href="styles/main.css">
 
-        <script src="scripts/main.js" type="module" defer></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+
     </head>
 
     <body>
@@ -113,6 +117,7 @@
                 </p>
             </div>
         </footer>
+        <script src="scripts/main.js" type="module" defer></script>
 
     </body>
 
