--- a/project/index.html
+++ b/project/index.html
@@ -11,12 +11,12 @@
         <meta name="author" content="Majok Aguer">
 
 
-        <link rel="canonical" href="https://aguer47.github.io/wdd231/finalproject/">
+        <link rel="canonical" href="https://aguer47.github.io/wdd231/project/">
         <meta property="og:type" content="website">
         <meta property="og:title" content="Recipe Explorer | Home">
         <meta property="og:description" content="Find recipes fast, save your favorites and cook smarter every day.">
         <meta property="og:image" content="https://aguer47.github.io/wdd231/project/images/logo.png">
-        <meta property="og:url" content="https://aguer47.github.io/wdd231/finalproject/">
+        <meta property="og:url" content="https://aguer47.github.io/wdd231/project/">
         <meta name="twitter:card" content="summary_large_image">
 
 
