--- a/project/about.html
+++ b/project/about.html
@@ -20,7 +20,7 @@
         <link rel="stylesheet" href="styles/normalize.css">
         <link rel="stylesheet" href="styles/main.css">
 
-        <script src="scripts/main.js" type="module" defer></script>
+        <script src="scripts/main.js" defer></script>
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
