--- a/project/thanks.html
+++ b/project/thanks.html
@@ -31,7 +31,7 @@
         </script>
 
         
-        <script src="scripts/main.js" type="module" defer></script>
+        <script src="scripts/main.js" defer></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         
