--- a/project/contact.html
+++ b/project/contact.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Recipe Explorer — Contact</title>
-        <meta name="description" content="Contact Recipe Explorer. Submit your feedback or recipe suggestion.">
+        <meta name="description" content="Contact Recipe Explorer. Submit your feedback or recipe suggestion and you will have the best exeperience.">
         <meta name="author" content="Majok Aguer">
         <link rel="canonical" href="https://aguer47.github.io/wdd231/project/contact.html">
         <meta property="og:type" content="website">
