--- a/project/index.html
+++ b/project/index.html
@@ -7,7 +7,7 @@
 
         <title>Recipe Explorer | Home</title>
         <meta name="description"
-            content="Find delicious recipes by ingredients, time, and cuisine. Save favorites and explore step-by-step cooking.">
+            content="Find delicious recipes by ingredients, time and cuisine. Save favorites and explore step-by-step cooking.">
         <meta name="author" content="Majok Aguer">
 
 
