--- a/project/recipes.html
+++ b/project/recipes.html
@@ -7,7 +7,7 @@
 
         <title>Recipe Explorer — Recipes</title>
         <meta name="description"
-            content="Browse recipes by cuisine, difficulty, and time. Open details in an accessible modal.">
+            content="Browse recipes by cuisine, difficulty and time. Open details in an accessible modal.">
         <meta name="author" content="Majok Aguer">
 
     
