--- a/project/thanks.html
+++ b/project/thanks.html
@@ -5,8 +5,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Recipe Explorer — Thanks</title>
-        <meta name="description" content="Form submission summary.">
-        <meta name="author" content="Majok Aguer" />
+        <meta name="description" content="Form submission summary page confirming that your information was successfully received and processed.">
+        <meta name="author" content="Majok Aguer">
         <link rel="canonical" href="https://aguer47.github.io/wdd231/project/thanks.html">
         <meta property="og:type" content="website">
         <meta property="og:title" content="Recipe Explorer — Thanks">
