--- a/project/recipes.html
+++ b/project/recipes.html
@@ -133,7 +133,10 @@
                 <p>&copy; <span id="year"></span> | Recipe Explorer |
                     Last updated: <span id="lastModified"></span> |
                     <a href="thanks.html#attributions">Attributions</a> |
-                    <a href="https://example.com/your-video" target="_blank" rel="noopener noreferrer">Project Video</a>
+                    <a href="https://www.loom.com/share/2f4b586005c142cdb94cc3d555e6fd90" target="_blank" rel="noopener noreferrer">
+                        Project Video
+                    </a>
+
                 </p>
             </div>
         </footer>
